--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.2.2",
     "multer": "^1.4.4",
     "node-sass-middleware": "^1.0.1",
+    "nodemon": "^2.0.15",
     "npm-git-install": "^0.3.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0"
