--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
     "multer": "^1.4.4",
     "node-sass-middleware": "^1.0.1",
     "nodemon": "^2.0.15",
     "npm-git-install": "^0.3.0",
     "passport": "^0.5.2",
+    "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   }
 }
