--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod_start":"NODE_ENV=production nodemon index.js"
+    "prod_start": "NODE_ENV=production nodemon index.js"
   },
   "keywords": [
     "social"
@@ -25,6 +25,7 @@
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "node-sass-middleware": "^1.0.1",
     "nodemon": "^2.0.15",
@@ -32,6 +33,7 @@
     "passport": "^0.5.2",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "rotating-file-stream": "^3.0.3"
   }
 }
