--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "del": "^6.1.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "gulp": "^4.0.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-rev": "^9.0.0",
+    "gulp-sass": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
@@ -34,6 +39,11 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "rotating-file-stream": "^3.0.3"
+    "rotating-file-stream": "^3.0.3",
+    "sass": "^1.51.0"
+  },
+  "devDependencies": {
+    "gulp-imagemin": "^7.1.0",
+    "gulp-uglify-es": "^3.0.0"
   }
 }
